# fn-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fn-hs.cabal
app/: Main.hs
