cabal-version:       2.4

name:                fn-hs
version:             0.1.0.0
synopsis:            synopsis
-- description:
homepage:            https://github.com/juev/fn-hs
bug-reports:         https://github.com/juev/fn-hs/issues
license:             MIT
license-file:        LICENSE
author:              Denis Evsyukov
maintainer:          denis@evsyukov.org

category:            System
extra-source-files:  CHANGELOG.md

executable fn-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0,
                       time ==1.9.3,
                       utf8-string ==1.0.1.1,
                       SHA ==1.6.4.4,
                       directory ==1.3.6.1,
                       process ==1.6.10.0,
                       cmdargs ==0.10.20

  hs-source-dirs:      app
  default-language:    Haskell2010
